# esp32-lilygo-zx80

./: CMakeLists.txt  README.md
component/zx_spectrum_emulator/: CMakeLists.txt
component/zx_spectrum_emulator/include/: zx_keyboard.h  zx_spectrum_emulator.h  zx_tap.h
component/zx_spectrum_emulator/rom/: .gitignore  README.md
component/zx_spectrum_emulator/src/: z80user.h  zx_keyboard.c  zx_spectrum_emulator.c  zx_tap.c
component/zx_spectrum_emulator/tap/: .gitignore  README.md
main/: CMakeLists.txt  board_pins.h  display_s3.c  idf_component.yml  ili9341_esp_driver.c  ili9341_esp_driver.h  ili9341_esp_driver_board.h  lcd_lv_thread.c  lcd_lv_thread.h  main.c  st7789v_esp_driver.c  st7789v_esp_driver.h  tft_driver.h  zx_video.c  zx_video.h
